srcMyCoreApp/main/default/objects/SG_POC_Object__c/SG_POC_Object__c.object-meta.xml
<CustomObject>
    <description>this is a poc object</description>
    <label>SG - POC Object</label>
    <nameField>
        <label>SG - POC Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SG - POC Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>