srcMyCoreApp/main/default/objects/SG_POC_Object__c/fields/SG_POC_Field_1__c.field-meta.xml
<CustomField>
    <fullName>SG_POC_Field_1__c</fullName>
    <description>poc field 1</description>
    <inlineHelpText>poc field 1</inlineHelpText>
    <label>SG - POC Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>