srcMyCoreApp/main/default/objects/SG_POC_Object__c/fields/SG_POC_Field_2__c.field-meta.xml
<CustomField>
    <fullName>SG_POC_Field_2__c</fullName>
    <description>poc field 2</description>
    <inlineHelpText>poc field 2</inlineHelpText>
    <label>SG - POC Field 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
            <value>
                <fullName>Value3</fullName>
            </value>
            <value>
                <fullName>Value4</fullName>
            </value>
            <value>
                <fullName>Value5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>