srcMyCoreApp/main/default/objects/SG_POC_Object__c/fields/SG_POC_Field_3__c.field-meta.xml
<CustomField>
    <fullName>SG_POC_Field_3__c</fullName>
    <label>SG - POC Field 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SG_POC_Field_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
            <value>
                <fullName>Value3</fullName>
            </value>
            <value>
                <fullName>Value4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>