srcMyCoreApp/main/default/objects/SG_POC_Object__c/validationRules/SG_POC_Validation_1.validationRule-meta.xml
<ValidationRule>
    <fullName>SG_POC_Validation_1</fullName>
    <active>true</active>
    <description>poc validation</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>random message</errorMessage>
</ValidationRule>